--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 astroid==2.2.5
+autopep8==1.4.4
+dj-database-url==0.5.0
 Django==1.11
+django-bootstrap4==0.0.8
+django-heroku==0.3.1
 isort==4.3.20
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
-pkg-resources==0.0.0
+Pillow==6.0.0
+psycopg2==2.8.2
+pycodestyle==2.5.0
 pylint==2.3.1
 pytz==2019.1
 six==1.12.0
 typed-ast==1.4.0
+whitenoise==4.1.2
 wrapt==1.11.1
