--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ isort==4.3.20
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
 Pillow==6.0.0
+pkg-resources==0.0.0
 psycopg2==2.8.2
 pycodestyle==2.5.0
 pylint==2.3.1
+python-decouple==3.1
 pytz==2019.1
 six==1.12.0
 typed-ast==1.4.0
