--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-database-url==0.5.0
 Django==1.11
 django-bootstrap4==0.0.8
 django-heroku==0.3.1
+gunicorn==19.9.0
 isort==4.3.20
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
